<resources>
    <string name="app_name">Relaxing Lullaby Pro</string>
    <string-array name="catagories">
        <item>Birdsong</item>
        <item>Nature</item>
        <item>Animals</item>
        <item>Noise</item>
    </string-array>
     <string-array name="birdsong">
         <item>Birdsong</item>
         <item>Loons</item>
         <item>Lakeside Loons</item>
         <item>Rainy Loons</item>
          <item>Rainy Lakeside Loons</item>
          <item>Loons (no ducks)</item>
         <item>Lakeside Loons (no ducks)</item>
         <item>Rainy Loons (no ducks)</item>
          <item>Rainy Lakeside Loons (no ducks)</item>
        <item>Windy Birdsong</item>
        <item>River Birdsong</item>
        <item>Rain Birdsong</item>
        <item>Birdsong (no crows)</item>
        <item>Windy Birdsong (no crows)</item>
        <item>River Birdsong (no crows)</item>
        <item>Rain Birdsong (no crows)</item>
        </string-array>
    <string-array name="nature">
        <item>Waves</item>
         <item>Lakeside</item>
        <item>Breakers</item>
        <item>Wind in trees</item> 
        <item>Bubbly River</item>
        <item>Soft Rain</item>
        <item>Heavy Rain</item>
        <item>Roaring Fire</item>
        <item>Gentle Fire</item>
    </string-array>
    <string-array name="farm">
        <item>Flock</item>
        <item>Windy Flock</item>
        <item>River Flock </item>
        <item>Rain Flock</item>
        <item>Pigs</item>
        <item>Farmyard</item>
        <item>Windy Farmyard</item>
        <item>Rainy Farmyard</item>
        <item>River Farmyard</item>
    </string-array>
    <string-array name="noise">
        <item>Brown Noise</item>
        <item>Blue Noise</item>
        <item>Pink Noise</item>
        <item>Violet Noise</item>
        <item>White Noise</item>
    </string-array>
    <string name="stopbuttontext">Stop</string>
    <string name="startbuttontext">Start</string>
    <string name="soundscape">Soundscape</string>
    <string name="catagory">Category</string>
    <string name="volume">Soundscape Volume</string>
    <string name="defaultvolume">50</string>
    <string name="medialVolume">Media Volume</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <string name="buttonAlarmPickerTitle">Set Alarm</string>
    <string name="buttonFadePickerTitle">Set Fade Out</string>
    <string name="help_text">Lullabye Help\n
            \n
            Main Screen \n
            \n
            Start Fade\n
            This will start a countdown, once the countdown is complete, 
            Lullabye will slowly fade out and stop the soundscape. 
            You can set how long the countdown is from the options screen. The default countdown is one hour.\n
            \n
            Media Volume\n
            This slider sets the volume for all media
            played on your phone, ringtone volume
            is unaffected.\n
            \n
            Soundscape Volume\n
            This sets the volume of the Lullabye app only, and provides 
            much more fine control, allowing Lullabye to play at very low volumes without
            the sound cutting out.\n
            \n
            Category\n
            Lullabye has many soundscapes, to help make them more accessible, they
            are grouped together with other similar soundscapes. If the category list is too long
            to fit on the screen there will be a scroll bar on the right of the list
            allowing you to see all categories. Picking a new category will stop any 
            soundscape currently playing\n
            \n
            Soundscape\n
            This allows you to select the individual soundscape you wish to listen to.
            As with the category list, the soundcape list will be scrollable if
            it is too long to fit on screen. Picking a new soundscape will stop any 
            soundscape currently playing\n
            \n
            Start Button\n
            Starts the selected soundscape playing. Since many soundscapes have silences, 
          	A play icon will be displayed when a soundscape is active, just in case there 
          	is a long pause at the beginning of the soundscape and it is not clear if it
          	is running.\n
          	\n
          	Stop Button\n
          	Stops the currently active soundscape playing.\n
          	\n
          	\n
          	Options Screen\n
          	\n
          	Play In Background\n
          	This sets Lullabye so it will continue to play soundscapes
          	when the Lullabye screen is not visible. You will need to 
          	set this option if your phone has and automatic screen lock,
          	or if you wish to use another app while listening to Lullabye.\n
          	\n
          	Lifeform  activity\n
          	This sets the frequency of animal sounds in applicable soundscapes.
          	Moving the slider fully to the left will make animal sounds play continuously,
          	moving to it fully right will make twice as infrequently as default. The minimum 
          	setting for the slider is locked at 1/10 of a second, things get very odd at faster speeds.
          	Please note changes in this slider will not be heard until you return to the main screen\n 	   	
          \n
          Set Fade Out\n
          This allows you to set the countdown duration to your preferred time. 
          Once the time is set the, fade can be activated from the main screen. 
          Pick the desired time from the Hour/Minute dialog shown after pressing the \'Set Fade Out\' button.
          The longest countdown possible is 24 hours \n
          \n
          Hardware controls.\n
          \n
          Volume Buttons:Media Volume.\n
          \n
          Home Button:Return to Home, leave Lullabye Running.\n
          \n
          Back Button:Hard close app.\n</string>
    <string name="helpCloseButtonText">Close</string>
    <string name="about_text">            About Lullabye.\n
            Relaxing Lullaby© 2012-2014 Richard Beech. All rights reserved.\n\n
            Version 2.0\n
            \n
            Unless required by applicable law or agreed to in writing,
             This Work is provided on an AS IS BASIS, WITHOUT WARRANTIES OR
              CONDITIONS OF ANY KIND, either express or implied, including,
               without limitation, any warranties or conditions of TITLE, 
               NON-INFRINGEMENT, MERCHANTABILITY, or FITNESS FOR A PARTICULAR 
               PURPOSE. You are solely responsible for determining the 
               appropriateness of using or redistributing the 
               Work and assume any risks associated with 
               Your exercise of permissions under this License.</string>
    <string name="textViewLifeformActivityTitle">Lifeform Activity</string>
    <string name="checkBoxPlayInBackgroundTitle">Play In Background</string>
    <string name="whats_new">What\'s New in Version 2.0\n
        Major code updates for Android 2.3 and later versions.\n
        Decrased CPU usage for better battery life.\n
        Fixed Soundscape volume not loading preferance on Android 2.3.1\n
        Fixed Google Ad not displaying due to SDK update.\n
        Re-engineered sound generator to ease creating new soundscapes.\n
       Version 1.7\n 
        2 new fire soundscapes.\n
        Removed river soundscape, its was not up to the quality of other soundscapes.\n
        Cleaned up many sounds to remove background noise.\n
        Improved timing on Nature soundscape generator, this has considerably improved the audio quality.\n 
        Version 1.6 \n
	Compatible with Android 1.6+ thousands of new devices supported.\n
	Version 1.5\n
       Interface French and Mandarin language support (activated when the appropriate Android system language is set).\n
       Total rework of load process to improve load times and app stability.\n
       Total Rework of interface logic to remove English language dependency and improve response to user input.\n
        Improved remote error reporting.\n
       Version1.4\n
       \n
       9 new Loon and lakeside soundscapes
     
                        \n
</string>
    <string name="version">2.0 Pro</string>
    <string name="textViewFadeOut">No fade time set yet.</string>
    <string name="checkBoxRepeatAlarmTitle">Repeat Alarm</string>
    <string name="textviewalarm">No alarm time set yet.</string>
    <string name="fadeOutText">"Fade out in "</string>
    <string name="startFadeText">Start Fade in</string>
    <string name="loadMessage">Please wait, loading sounds.</string>
		<string name="cancelFadeText">Cancel Fade</string>
		<string name="alarmText">Alarm</string>
</resources>