<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom" >

    <com.digitale.lullabyepro.AnimationView
        android:id="@+id/aview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/RelativeLayout1" />

    <RelativeLayout
        android:id="@+id/LayoutTransport"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignBottom="@+id/aview"
        android:background="@drawable/bar"
        android:padding="6dp" >

        <Button
            android:id="@+id/StopSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/stopbuttontext" />

        <Button
            android:id="@+id/StartSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/StopSound"
            android:layout_alignBottom="@+id/StopSound"
            android:layout_alignParentLeft="true"
            android:text="@string/startbuttontext" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical" >
    </RelativeLayout>

    <ScrollView
        android:id="@+id/controlScroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/LayoutTransport" >

        <LinearLayout
            android:id="@+id/contolPanel"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/fadePanel"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@drawable/bar"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" >

                <Button
                    android:id="@+id/buttonFadeOut"
                    style="@style/Theme.Transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/startFadeText" />

                <Button
                    android:id="@+id/buttonFadeCancel"
                    style="@style/Theme.Transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/cancelFadeText"
                    android:visibility="invisible" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LayoutMediaVolume"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@drawable/bar"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" >

                <TextView
                    android:id="@+id/textViewMediaVolumeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/medialVolume" />

                <TextView
                    android:id="@+id/textViewMediaVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewMediaVolumeTitle"
                    android:text="@string/defaultvolume"
                    android:textSize="24sp" />

                <SeekBar
                    android:id="@+id/seekBarMediaVolume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/textViewMediaVolumeTitle"
                    android:layout_toRightOf="@+id/textViewMediaVolume"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:progress="50" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LayoutSoundscapeVolume"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@drawable/bar"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/volume" />

                <TextView
                    android:id="@+id/textViewVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/TextView02"
                    android:text="@string/defaultvolume"
                    android:textSize="24sp" />

                <SeekBar
                    android:id="@+id/seekBarVolume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/TextView02"
                    android:layout_toRightOf="@+id/textViewVolume"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:progress="50" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LayoutCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bar"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" >

                <TextView
                    android:id="@+id/textViewCatagory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catagory" />

                <Spinner
                    android:id="@+id/spinnerCatagory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewCatagory" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LayoutSoundscape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bar"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" >

                <TextView
                    android:id="@+id/textViewSoundscape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soundscape" />

                <Spinner
                    android:id="@+id/spinnerSoundscape"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewSoundscape" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/alarmPanel"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@drawable/bar"
                android:paddingLeft="6dp"
                android:visibility="invisible" >

                <Button
                    android:id="@+id/buttonAlarm"
                    style="@style/Theme.Transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/alarmText" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>